# Forza_ETH_race_stack

./: model_predictive_speed_and_steer_control.py
model_predictive_speed_and_steer_control_cpp/: CMakeLists.txt  README.md  package.xml
model_predictive_speed_and_steer_control_cpp/config/: demo_params.yaml
model_predictive_speed_and_steer_control_cpp/launch/: model_predictive_speed_and_steer_control.launch.py
model_predictive_speed_and_steer_control_cpp/src/: model_predictive_speed_and_steer_control.cpp
